--- a/youtube.html
+++ b/youtube.html
@@ -97,7 +97,7 @@
              
             <div class="footer-icons">
              
-            <a href="#"><i class="fa fa-facebook"></i></a>
+            <a href="#"><i class="fab fa-facebook"></i></a>
             <a href="#"><i class="fa fa-twitter"></i></a>
             <a href="#"><i class="fa fa-linkedin"></i></a>
             <a href="#"><i class="fa fa-github"></i></a>
